2009-06-01  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c, win32/gui.rc, win32/gui.h: added "Save as WAV"

* raw2c.pl: made shorter

* asap2wav.c: error message for trailing options which were silently ignored


2009-05-29  Piotr Fusik  <fox@scene.pl>
* win32/Makefile, asap.c, win32/winamp/in_asap.c, win32/winamp/ipc_pe.h,
  win32/winamp/wa_ipc.h: switched from VS2008 to MinGW


2009-05-28  Piotr Fusik  <fox@scene.pl>
* win32/gui.rc: backslashes in icon paths changed to slashes for windres

* win32/gui.c: prevent a gcc warning


2009-05-27  Piotr Fusik  <fox@scene.pl>
* asapscan.c: do not trigger silence detection at the initial silence


2009-05-18  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: apokeysnd.dll stripped from 50k to 11k by not using
  the C library


2009-05-14  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: shortened and fixed "clean" target; shortened "dist" target;
  backup file removal within ASCIIDOC_POSTPROCESS

* acpu.c: optimized ROR

* asap.c, asap.h, asap2wav.c, java/ASAP.ppjava, java/ASAP2WAV.java,
  java/ASAPMIDlet.java, csharp/ASAP.ppcs, csharp/asap2wav.cs:
  ASAP_GetWavHeader()

* java/ASAP2WAV.java, csharp/asap2wav.cs: with "--raw" option the default
  output filename extension is "raw"

* java/ASAP.ppjava, java/ASAPMIDlet.java: display TIME tags

* asap.c, asap.h, java/ASAP.ppjava, java/ASAPMIDlet.java, csharp/ASAP.ppcs:
  ASAP_GetPosition()

* csharp/ASAP.ppcs, csharp/asap2wav.cs: made ASAP_SampleFormat
  an enum and not int

* java/ASAPMIDlet.java, asap.c, java/ASAP.ppjava: started implementation
  of a "small streams" algorithm


** 1.2.1 released on 2009-05-08

2009-05-08  Piotr Fusik  <fox@scene.pl>
* asap2wav.c, java/ASAP2WAV.java, csharp/asap2wav.cs:
  small refactoring of no_input_files and print_version

* asap2wav.1, Makefile.in, win32/USAGE, win32/Makefile, java/USAGE:
  removed the man page

* README: more information about input file formats

* INSTALL, README, Makefile.in, win32/Makefile: INSTALL converted